# test-front-serverest

./: .gitignore  README.md
application/: Dockerfile
application/front-build/: asset-manifest.json  index.html  precache-manifest.472bbf4d1cc856a50a9a353c3408b5c1.js  precache-manifest.ed65f79753aff8a2bfcbc8d910b84d10.js  service-worker.js
application/front-build/static/css/: 2.0012cb62.chunk.css  2.0012cb62.chunk.css.map  main.47264059.chunk.css  main.47264059.chunk.css.map
application/front-build/static/js/: 2.186d7cf0.chunk.js  2.186d7cf0.chunk.js.map  main.554ae4f5.chunk.js  main.554ae4f5.chunk.js.map  main.d28a8d29.chunk.js  main.d28a8d29.chunk.js.map  runtime-main.eb6b3d50.js  runtime-main.eb6b3d50.js.map
cypress/: package-lock.json  package.json
cypress/cypress/e2e/1-getting-started/: serverest.cy.js
playwright/: package-lock.json  package.json  playwright.config.ts
playwright/tests/: example.spec.ts
selenium/: .flake8  config.toml  conftest.py  docker-compose.yml  pyproject.toml
selenium/src/: consts.py  custom_selenium.py  factory.py
selenium/src/actions/admin_home_actions/: admin_home_actions.py
selenium/src/actions/common/: alert_actions.py
selenium/src/actions/login_actions/: login_actions.py
selenium/src/actions/register_actions/: register_actions.py
selenium/src/actions/user_home_actions/: user_home_actions.py
selenium/src/fixtures/: api.py  users.py
selenium/src/keywords/: auth.py  navigation.py  navigator.py  user_data.py
selenium/src/lean_pom/admin_home_pom/: admin_home_pom.py
selenium/src/lean_pom/common/: alert_pom.py
selenium/src/lean_pom/login_pom/: login_pom.py
selenium/src/lean_pom/register_pom/: register_pom.py
selenium/src/lean_pom/user_home_pom/: user_home_pom.py
selenium/src/model/: user.py
selenium/src/pom/actions/admin_home_actions/: admin_home.py
selenium/src/pom/actions/admin_navbar_actions/: admin_navbar.py
selenium/src/pom/actions/common/: alert.py
selenium/src/pom/actions/login_actions/: login.py
selenium/src/pom/actions/register_actions/: register.py
selenium/src/pom/query/admin_home/: admin_home.py
selenium/src/pom/query/common/: alert.py
selenium/src/pom/query/login/: login.py
selenium/src/pom/query/register/: register.py
selenium/src/pom/query/user_home/: user_home.py
selenium/src/pom/ui/admin_home/: admin_home.py
selenium/src/pom/ui/admin_navbar/: admin_navbar.py
selenium/src/pom/ui/common/: alert.py
selenium/src/pom/ui/login/: login.py
selenium/src/pom/ui/register/: register.py
selenium/src/pom/ui/user_home/: user_home.py
selenium/tests/: conftest.py
selenium/tests/login/: test_login.py
selenium/tests/logout/: test_logout.py
selenium/tests/register/: test_register.py
test-plan/: 001-login.md  002-logout.md  003-register.md
