[tool.poetry]
name = "test-front-serverest"
version = "0.1.0"
description = "Serverest Frontend Test Automation multi-framework"
authors = ["Leonardo Tsuda"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
flake8 = { version = "*", python = ">=3.11,<3.12" }
isort = { version = "*", python = ">=3.11,<3.12" }
black = { version = "*", python = ">=3.11,<3.12" }
selenium = "^4.8.0"
pytest = "^7.2.1"
pytest-xdist = "^3.1.0"
pytest-stress = "^1.0.1"
pytest-rerunfailures = "^11.0"
requests = "^2.28.2"
pytest-base-url = "^2.0.0"
faker = "^16.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']
line-length = 100
preview = true
extend-exclude = '''
/(
    \.direnv
    |\.eggs
    |\.git
    |\.hg
    |\.mypy_cache
    |\.nox
    |\.tox
    |\.venv
    |venv
    |\.svn
    |\.ipynb_checkpoints
    |_build
    |buck-out
    |build
    |dist
    |cypress
    |playwright
    |__pypackages__
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
base_url = "http://localhost:3000"
pythonpath = ["src"]
